      (Closes: #801647)
  * checks/phppear.{desc,pm}:
    + [JW] Apply patch from Mathieu Parent to make dh-php* and php*-dev
      package names unversioned.
  * checks/scripts.desc:
    + [NT] Suggest dh_python2 / dh_python3 instead of dh_pysupport and
      dh_pycentral.  Thanks to Neil Williams for the report.
      (Closes: #818607)

  * commands/info.pm:
    + [NT] Accept "--tag" as an alias of "--tags".  Thanks to Robert
      Luberda for the suggestion.  (Closes: #816454)
  * commands/lintian:
    + [NT] Also check DEBRELEASE_DEBS_DIR for .changes files when no
      packages are given on the command line.  Thanks to Sean Whitton for
      the suggestion.  (Closes: #812568)

  * data/debhelper/*:
    + [JW] Refresh against unstable.  Thanks to Mathieu Parent for the bug
      report.
  * data/menu-format/known-desktop-keys:
    + [NT] Accept "DesktopNames" as a known key in desktop files.  Thanks
      to Yves-Alexis Perez for the suggestion.  (Closes: #766099)
  * data/spelling/corrections:
    + [JW] Add more corrections.
  * data/standards-version/release-dates:
    + [AB] Add 3.9.8.

  * debian/control:
    + [AB] Declare compliance with Debian Policy 3.9.8. (No other changes
      required.)

  * lib/Lintian/Check.pm:
    + [JW,NT] Flag a duplicate word as a spelling error.  This affects
      several tags plus spellintian.  (Closes: #800476)
  * lib/Lintian/Collect/Binary.pm:
    + [JW] Apply patch from Ben Hutchings to consider source versions when
      testing nativeness of binary packages.  (Closes: #821902)
  * lib/Lintian/Relation.pm:
    + [JW,NT] Fix broken implication with "P (<< V)" relations.
      (Closes: #819560)
  * lib/Lintian/Tag/Info.pm:
    + [JW] Use HTTPS for manpages.debian.org URLs.
  * lib/Lintian/Unpacker.pm:
    + [NT] Name the subprocess after what is processing.

  * private/refresh-debhelper-data:
    + [JW] Apply patch from Mathieu Parent to fix path to Contents files.
